Fix hero display issues on IE11

--- a/sass/foundations/_layout.scss
+++ b/sass/foundations/_layout.scss
@@ -17,6 +17,7 @@
 
 	.section,
 	.site-branding,
+	.content-main,
 	.footer,
 	.type-page {
 	  @include centered-content();
