--- a/sass/modules/_frontpage.scss
+++ b/sass/modules/_frontpage.scss
@@ -59,7 +59,12 @@
 
 @media screen and (min-width: 35em){
 
- 	.inner-section {
+ 	.content-main--frontpage {
+		background-color: $color__background-inner;
+		position: relative;
+	}
+
+	.inner-section {
  		align-items: baseline;
 		display: flex;
 		flex-wrap: wrap;
@@ -71,12 +76,14 @@
 	}
 
 	.section--frontpage__entry {
-		flex: 0 0 percentage(2/3);
+		flex: 0 0 auto;
+		margin-right: 5%;
+		width: 65%;
 	}
 
  	.section--frontpage__resources {
-		flex: 1 0 percentage(1/3);
-		padding-left: 4em;
+		flex: 0 0 auto;
+		width: 30%
 	}
 
 }
@@ -95,7 +102,6 @@
 
 	.content-main--frontpage {
 		background-color: #ece7cc;
-		position: relative;
 	}
 
   .menu--home > li {
